# task_manager

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  conftest.py  pyproject.toml
apps/task_manager/: admin.py  models.py
apps/task_manager/api/v1/: serializers.py  tasks.py  urls.py  views.py
apps/task_manager/api/v1/tests/: factories.py  test_check_due_tasks.py  test_models.py  test_send_single_message.py  test_task_create.py  test_task_list.py  test_task_retrieve_update.py
apps/task_manager/management/commands/: create_tasks.py
apps/task_manager/migrations/: 0001_initial.py
bot/: __main__.py  bot.py  config.py
bot/handlers/: done.py  mytasks.py  start.py
bot/services/: task_api.py
bot/utils/: date_format.py
core/: celery.py  config.py  docstring.py  paginations.py  settings.py  views.py
core/tests/: test_celery.py
core/urls/: __init__.py  v1.py
docker/: Dockerfile  Dockerfile.bot  compose.yml
docker/nginx/: Dockerfile  nginx.conf
